tests/baselines/reference/declarationEmitComputedPropertyNameEnum3.errors.txt
type.ts(7,28): error TS1170: A computed property name in a type literal must refer to an expression whose type is a literal type or a 'unique symbol' type.
type.ts(7,28): error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.


==== type.ts (2 errors) ====
    export namespace Foo {
      export enum Enum {
        A = "a",
        B = "b",
      }
    }
    export type Type = { x?: { [Foo.Enum]: 0 } };
                               ~~~~~~~~~~
!!! error TS1170: A computed property name in a type literal must refer to an expression whose type is a literal type or a 'unique symbol' type.
                               ~~~~~~~~~~
!!! error TS2464: A computed property name must be of type 'string', 'number', 'symbol', or 'any'.
    
==== index.ts (0 errors) ====
    import { type Type } from "./type";
    
    export const foo = { ...({} as Type) };
    